<?xml version="1.0"?>
<package>
  <name>pubimage1</name>
  <version>0.1.0</version>
  <description>

     pubimage1

  </description>
  <maintainer email="pdevendra@student.nitw.ac.in">Devendra</maintainer>
  <author>Devendra</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>image_transport</build_depend>
<build_depend>cv_bridge</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

 
</package>
